style.css
/*
 * CSS File for the solution
 * Final Exam
 * You got this!
 */

/*
 * COLOUR PALETTE
 *
 * YOU DO NOT NEED TO USE THESE COLOURS, BUT YOU CAN IF YOU WANT TO
 *
 * #cdb4db - Lavender Purple
 * #ffc8dd - Pink
 * #ffafcc - Light Pink
 * #bde0fe - Light Blue
 * #a2d2ff - Light Blue
 * #0c0a3e - Dark Purple
 * #797979 - Grey
 *
 * https://coolors.co/palette/cdb4db-ffc8dd-ffafcc-bde0fe-a2d2ff
 */

/*
 * FOR YOUR DESKTOP VIEWPORT I WOULD RECOMMEND THE FOLLOWING MEDIA QUERY
 *
 * @media screen and (min-width: 800px) {
 *    ... your styles here ...
 * }
 */

 html {
  font-size: 1.0rem;
}

body {
  font-family: Arial, Helvetica, sans-serif;

  background-color: #f7ead7;
}

/*
 * SR-ONLY
 */
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border: 0;
 }


/*
 * SHARED STYLES
 */

.page-container {
  max-width: 80vw;
  margin: 0 auto;
  padding: 0 1.0rem;

  display: flex;
  flex-direction: column;
  align-items: center;
}

/*
 * ADD YOUR STYLES HERE
 */

 /* 
 universal buttons
 */

 button{
  height: 4rem;
  width: 10rem;
  padding: 1rem;
  border-radius: 1rem;
  border-style: none;
  transition: transform .2s;
 }

 button:hover{
  transform: scale(1.2);
 }

 button:active{
  transform: scale(1.2);
 }

 /* 
 header////////////////////////////////////////////////////////////////////////////////////
 */

 .header-container {
  display: flex;
  justify-content: space-between;
 }

 .header-container img{
  width: 4rem;
  height: 4rem;
  padding: 1rem;
  margin: 3rem 0rem 10rem 10rem;

  background-color: black;
  border-radius: 1rem;
 }

 .header-container button{
  margin: 3rem 10rem 10rem 0rem;
  background-color: black;
  color: white;
 }

 .header-container button:hover{
  background-color: rgb(207, 144, 207);
  color: black;
 }

 /* 
 The show off section with a lot of skills using grid
 */

 .hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
 }

 .hero h1{
  font-size: 4rem;
 }

 .hero p{
  justify-self: center;
  max-width: 50rem;
  font-size: 1.1rem;
  color: grey;
 }

 /* The show offs in hero ----------------- */

 .show-offs {
  display: grid;
  width: 80vw;
  height: 20rem;

  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 1rem;

  margin: 10rem 0 10rem 0;
 }

 .show-offs div{
  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
  transition: box-shadow 0.3s ease-in-out;
 }

 .show-offs div:hover {
  box-shadow: 0 10px 15px rgba(0,0,0,0.3);
  }


  .show-offs p {
    align-self: flex-end;
    font-size: 2rem;
    font-weight: bold;
    color: rgb(0, 0, 0);
  }

 .show-offs-1 {
  grid-area: 1 / 1 / 3 / 3; 

  background: rgb(221, 159, 235);
  
  border-radius: 1rem;
  padding: 1rem;

  display: flex;
 }


 .show-offs-2 {
  grid-area: 1 / 3 / 2 / 4;  
  background: rgb(150, 178, 221);
  border-radius: 1rem;
  padding: 1rem;

  display: flex;
 }

 .show-offs-3 {
  grid-area: 1 / 4 / 2 / 5;
  background: rgb(137, 223, 126);
  border-radius: 1rem;
  padding: 1rem;

  display: flex;
 }

 .show-offs-4 {
  grid-area: 1 / 5 / 2 / 7;
  background: rgb(219, 213, 136);
  border-radius: 1rem;
  padding: 1rem;

  display: flex;
 }

 .show-offs-5{
  grid-area: 2 / 3 / 3 / 5;
  background: rgb(251, 183, 128);
  border-radius: 1rem;
  padding: 1rem;

  display: flex;
 }

 .show-offs-6{
  grid-area: 2 / 5 / 3 / 7; 
  background: rgb(245, 159, 159);
  border-radius: 1rem;
  padding: 1rem;

  display: flex;
 }

/* 
About //////////////////////////////////////////////////////////////////////////////////////////////
*/

.self-about {
  display: flex;
  width: 80vw;
  align-items:center;
  /* justify-content: space-between; */
  gap: 2rem;

  margin: 0 0 10rem 0;
}

.self-about img{
  width: 40rem;
  height: 40rem;
  border-radius: 2rem;
  object-fit: cover;
  object-position: 50% 10%;
  /* padding: 2rem; */
}

.self-about-info {
  max-width: 35rem;
}

.self-about-info h2{
  font-size: 2.7rem;
}

.self-about-info p{
  font-size: 1.3rem;
  font-weight: 400;
}

.self-about-info button{
  background-color: rgb(150, 178, 221);;
  margin: 2rem 0 0 0;
}

.self-about-info button:hover{
  background-color: rgb(221, 159, 235);
}

/* 
My work//////////////////////////////////////////////////////////////////////////////////////////
*/

.my-work{
  /* background-color: aquamarine; */

  display: flex;
  flex-direction: column;
  align-items: center;

  margin: 0 0 9rem 0;
}

.my-work h2{
  font-size: 4rem;
  max-width: 20rem;
  margin: 0 0 3rem 0;
}

/* 
my work gallery -------------------------------------------
*/

.my-work-gallery{
  display: grid;
  width: 80vw;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 2rem;
  margin: 0 0 8rem 0;
}

.my-work-gallery img{
  width: 35rem;
  height: 35rem;
  
  object-fit: cover;
  object-position: 50% 10%;

  border-radius: 1rem;
  border: 0.1rem solid rgb(255, 255, 255);

  margin-bottom: 1rem;

  overflow-y: auto;
}

.my-work-gallery img{
  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
  transition: box-shadow 0.3s ease-in-out;
 }

.my-work-gallery img:hover {
  box-shadow: 0 10px 15px rgba(0,0,0,0.3);
}

.my-work-gallery h3{
  font-size: 2rem;
}

.work-tags{
  display: flex;
  gap: 1rem;
}

.work-tags p{
  background-color: rgb(232, 175, 230);
  padding: 0.1rem 0.5rem;
  border-radius: 1rem;
  font-size: 0.7rem;
  font-weight: 700;
}

.my-work-gallery:nth-child(1){
  grid-area: 1 / 1 / 2 / 2; 
}

.my-work-gallery:nth-child(2){
  grid-area: 1 / 2 / 2 / 3; 
}

.my-work-gallery:nth-child(3){
  grid-area: 2 / 1 / 3 / 2; 
}

.my-work-gallery:nth-child(4){
  grid-area: 2 / 2 / 3 / 3; 
}

/* 
Contact information////////////////////////////////////////////////////////////////////////////
*/

.contact{
  background-color: rgb(184, 151, 215);
  width: 80vw;
  padding: 4rem;
  border-radius: 1rem;
  margin: 0 0 10rem 0;
}

.contact h2{
  font-size: 2.5rem;
  margin: 0 0 1rem 0;
}

.contact p{
  margin: 0 0 1rem 0;
}

.contact button{
  background-color: black;
  color: white;
}

.contact button:hover{
  background-color: rgb(101, 42, 165);
}

/* 
footer ///////////////////////////////////////////////////////////////////////////////////////
*/
footer{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.solid-divider {
  width: 80vw;
  margin: 0 0 2rem 0;
}

.footer-info{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;

  width: 80vw;
  color: gray;
}

footer img{
  width: 4rem;
  height: 4rem;
  padding: 1rem;
}

/* 
reponsive design //////////////////////////////////////////////////////////////
 */

/* 
This responsive works in chrome console preview (toggle device bar) but not resizing browser window 
*/

@media (max-width:480px)  {
  /* the entire page */
  .page-container{
    width: 90vw;
  }
  button:hover::before{
    transform: none;
   }
  
  button:active{
  transform: scale(1.2);
  }

  button:active::after{
    transform: none;
  }

  /* header with some links///////////////////////////////////////// */
  .header-container img {
    margin: 1rem 0 7rem 2rem;
   }
  .header-container button{
    margin: 1rem 2rem 7rem 0;
  }

  /* hero with title/////////////////////////////////////////////////// */
  .hero h1{
    text-align: center;
  }
  .hero p{
    text-align: center;
  }

  /* show offs with different programming language////////////// */
  .show-offs{
    display: flex;
    flex-direction: column;
    margin: 8rem 0 30rem 0;
    width: 90vw;
  }

  .self-about{
    display: flex;
    flex-direction: column;
    width: 90vw;
  }
  .self-about img{
    /* width: 90vw; */
  }
  .self-about p{
    font-weight: 500;
    margin: 1rem 0 0 0;
  }

  /* my work gallery///////////////// ////////////////////////////////*/
  .my-work-gallery{
    display: flex;
    width: 90vw;
    flex-direction: column;
    margin: 0 0 5rem 0;
  }

  /* contact info ///////////////////////////////////////////////////////// */
  .contact{
    width: 90vw;
    padding: 2rem;
  }

  /* footer //////////////////////////////////////////////////////////////// */
  .solid-divider{
    margin: 0 0 0 0;
  }

}

